added ignore section

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -129,6 +129,17 @@
                     <label title="Validate format"><input type="checkbox" id="opt-emails"> Validate Emails</label>
                     <label title="Remove noise chars"><input type="checkbox" id="opt-special"> Remove Noise</label>
                 </div>
+                <div class="options-group">
+                <h3>🛑 Columns to Ignore</h3>
+                <div style="background: #fff1f2; padding: 15px; border-radius: 8px; border: 1px solid #fecdd3;">
+                    <p style="font-size: 0.85rem; margin-top:0; color:#881337;">
+                        Select columns you want to keep <b>exactly as is</b> (e.g. IDs, Addresses, Descriptions).
+                    </p>
+                    <div id="ignore-col-list" style="max-height: 150px; overflow-y: auto; display: grid; grid-template-columns: 1fr 1fr; gap: 5px; margin-top: 10px;">
+                        <span style="font-size:0.85rem; color:#666;">Upload a file to see columns...</span>
+                    </div>
+                </div>
+            </div>
             </div>
 
             <div class="options-group" style="border:none;">
